Add proper metadata and make the project easily installable
Use uv for running management tasks as well.

--- a/.gitignore
+++ b/.gitignore
@@ -1,12 +1,11 @@
 .idea/
 .venv/
-*.pyc
 *.egg-info
 /build/
 __pycache__/
 .mypy_cache/
 .pytest_cache/
 .ruff_cache/
-venv
 .coverage
 /htmlcov/
+uv.lock
